--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.4.2",
     "@react-three/fiber": "^8.0.11",
     "next": "12.1.5",
     "react": "18.0.0",
@@ -23,7 +24,9 @@
     "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "glslify-loader": "^2.0.0",
     "postcss": "^8.4.12",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
